--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,7 @@
 [submodule "bundle/tern"]
 	path = bundle/tern
 	url = https://github.com/marijnh/tern_for_vim.git
+[submodule "bundle/bootstrap-snippets"]
+	path = bundle/bootstrap-snippets
+	url = git://github.com/bonsaiben/bootstrap-snippets.git
+	branch = bootstrap-3-3-2
